# mini_loihi

./: .gitattributes  .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  BENCHMARKING.md  DEVELOPMENT_GUIDE.md  FINAL_ENGINEERING_AUDIT.md  HARDWARE_MAPPING.md  LIMITATIONS.md  MULTICORE_ARCHITECTURE.md  PATTERN_TASK.md  PLASTICITY.md  PROJECT_REPORT.md  REFERENCE_RESULTS.json  SINGLE_CORE_EXECUTION.md  STABILITY_AND_PRESETS.md  V1_DESIGN.md  V2_1_STABILITY_AUDIT.md  V2_2_STABILIZATION.md  V2_DESIGN.md  V3_1_OPTIMIZATION_AUDIT.md  V3_BENCHMARKING.md  V4_1B_VALIDATION_CLOSEOUT.md  V4_1_ARCHITECTURE_VALIDATION.md  V4_MULTICORE_ARCHITECTURE.md  V6_1_REFERENCE_BACKEND.md  V6_2_CYCLE_MODEL.md  V6_ARCHITECTURE.md  V7_0_RTL_KERNEL.md  V7_1A_VERIFICATION_AND_SYNTHESIS.md  V7_1B1_MEMORY_AND_INITIALIZATION.md  V7_1B2_REGISTERED_LIF_PIPELINE.md  V7_1C_EDA_VALIDATION.md  V7_1D1_FULL_CORE_FORMAL.md  V7_1D2_REGISTERED_READY_CUT.md  V8_0A_RECURRENCE_DELAY_CONTRACT.md  V8_0B_DELAY_WHEEL_MICROARCHITECTURE.md  V8_0C_DELAY_WHEEL_RTL.md  V8_0D_VIVADO_VALIDATION.md  V8_0E_RAM_FRIENDLY_DELAY_WHEEL.md  V8_1A_NEURON_DYNAMICS_CONTRACT.md  V8_1B_NEURON_CYCLE_MICROARCHITECTURE.md  V8_1C1_CYCLE_CONTRACT.md  (+11 more)
examples/: run_benchmarks.py  run_hardware_mapping.py  run_learning_stability_audit.py  run_multicore_demo.py  run_optimization_audit.py  run_pattern_learning.py  run_plasticity_demo.py  run_toy_network.py
formal/: initial_weight_formal.mem  lif_pipeline_formal.sv  lif_pipeline_readycut_formal.sv  rv_fifo_formal.sv  rv_registered_cut_formal.sv  v81c_pipeline_bmc.sby  (+19 more)
rtl/: README.md  (+2 more)
(+360 files in other folders)
